--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
+    "eslint": "^3.8.1",
     "react-scripts": "0.7.0"
   },
   "dependencies": {
